# shamir_secret_sharing

./: Cargo.toml
src/: lib.rs  main.rs  shamir.rs
