[package]
name = "shamir_secret_sharing"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# rand = "0.8"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
# num-bigint = { version = "0.4.3", features = ["rand"] }
# num-traits = "0.2"
curve25519-dalek = "4.0"
ff = "0.12"
rand = "0.8.5"
num-bigint = "0.4"
num-traits = "0.2"